--- a/index.html
+++ b/index.html
@@ -243,9 +243,18 @@
     <footer>
         <div class="container">
             <div class="row footer__row">
-            <figure>
+                <a href="#" class="footer__anchor">
+                    <figure class="footer__logo">
+                        <img src="./assets/Mike-Haigh-Logo-white.png" class="footer__logo--img" alt="">
+                    </figure>
+                    <span class="footer__logo--popper">
+                        Top
+                        <!-- <i class="fa-solid fa-arrow-up"></i> -->
+                    </span>
+                </a>
+            <!-- <figure>
                 <img class="footer__logo--img" src="./assets/Mike-Haigh-Logo-white.png" alt="">
-            </figure>
+            </figure> -->
             <div class="footer__social--list">
                 <a href="https://github.com/Mhaigh81" target="_blank" class="
                     footer__social--link
